2004-11-30  Derek Price  <derek@ximbiot.com>

	* parseinfo.c (readBool): Update quotes in error message for
	consistency.  Move function to...
	* subr.c (readBool): ...here.
	(*): Gratuitous reformatting.
	* cvs.h: Move all subr.c function prototypes to...
	* subr.h: ...this new file.
	* Makefile.am (cvs_SOURCES): Add subr.h.

2004-11-30  Derek Price  <derek@ximbiot.com>

	* parseinfo.c (readBool): Reorder arguments to error() and improve
	header comment.

2004-11-30  Derek Price  <derek@ximbiot.com>

	* client.c (handle_referrer): New function.
	(handle_redirect): Handle possibility that CLIENT_REFERRER was set via
	a response.
	* server.c (serve_command_prep): Send a normalized Referrer response
	before a Redirect when the client supports it.

2004-11-29  Mark D. Baushke  <mdb@cvshome.org>

	* rcs.c (RCS_setlocalid): Do more configuration validation.
	Include some gratuitous reformatting.
	* sanity.sh (keywordexpand): Add tests for new validation code.

2004-11-24  Derek Price  <derek@ximbiot.com>

	* server.c (become_proxy): Note assumptions about syncronized primary
	and secondary versions with `FIXME?' note.

2004-11-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (info): Ignore comments in verifymsg test.

2004-11-22  Mark D. Baushke  <mdb@cvshome.org>

	* mkmodules.c (loginfo_contents, verifymsg_contents,
	commitinfo_contents, taginfo_contents, preproxy_contents,
	postadmin_contents, postproxy_contents, posttag_contents,
	postwatch_contents, notify_contents): Add comments regarding the
	additional format strings that are available. Include some
	gratuitous reformatting.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* subr.c (Xasnprintf): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* root.c (normalize_cvsroot): Improve header comment block.

2004-11-19  Derek Price  <derek@ximbiot.com>

	* server.c: Misc reformatting and comment corrections.

2004-11-19  Derek Price  <derek@ximbiot.com>
